<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ubaya.project.habittracker.view.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="ubaya.project.habittracker.view.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_newhabitFragment"
            app:destination="@id/newHabitFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dashboardFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_editHabitFragment"
            app:destination="@id/editHabitFragment" />
    </fragment>

    <fragment
        android:id="@+id/newHabitFragment"
        android:name="ubaya.project.habittracker.view.NewHabitFragment"
        android:label="@string/new_habit_title"
        tools:layout="@layout/fragment_new_habit" >
        <action
            android:id="@+id/action_newHabitFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/editHabitFragment"
        android:name="ubaya.project.habittracker.view.EditHabitFragment"
        android:label="EditHabitFragment" >
        <action
            android:id="@+id/action_editHabitFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
        <argument
            android:name="habitId"
            app:argType="string" />
    </fragment>

</navigation>
